--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-   "name": "backend",
+   "name": "nomaia",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "@types/cors": "^2.8.16",
-      "@types/express": "^4.17.20",
-      "@types/node": "^16.11.10",
+      "@types/cors": "^2.8.14",
+      "@types/express": "^4.17.17",
+      "@types/node": "^20.6.3",
       "nodemon": "^3.0.1",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
-   "dependencies": {
+      "dependencies": {
       "body-parser": "^1.19.1",
       "cors": "^2.8.5",
       "express": "^4.17.2",
-      "pg": "^8.4.0",
+      "pg": "^8.11.3",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
    "scripts": {
-      "dev": "nodemon src/index.ts",
+      "dev": "nodemon --watch src --exec ts-node src/index.ts",
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs --config src/data-source.ts"
    }
 }
