Ajuste import cors e express

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
       "pg": "^8.11.3",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
-   },
-   "scripts": {
+   },   "scripts": {
       "dev": "nodemon --watch src --exec ts-node src/index.ts",
       "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs --config src/data-source.ts"
